--- a/First_Steps.ipynb
+++ b/First_Steps.ipynb
@@ -48,7 +48,7 @@
     "* This is a programmer's meme, I'm sorry\n",
     "* Your first program looks like this:\n",
     "<pre><code> print (\"Hello World!\") </code></pre>\n",
-    "* Normally it would needs to be typed in an editor (eg gedit, notepad, idle).\n",
+    "* Normally it would need to be typed in an editor (eg gedit, notepad, idle).\n",
     "If you do not have Python on your machine or are unfamiliar with editors, follow the instructions in the video below\n",
     "* You have to save it in a suitably named file (say hello.py)\n",
     "* You run it by typing \n",
@@ -330,7 +330,7 @@
     "```\n",
     "and \n",
     "``` \n",
-    "# in meters\n",
+    "# in metres\n",
     "```\n",
     "above are there for your benefit, not for the interpreter. They are **comments**. Python ignores them. \n",
     "They can come after instructions or on a line of their own. Use liberally."
@@ -483,10 +483,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numbersum= +44 + (207) + 8825000 # not quite what I want\n",
-    "stringsum= \"+44\" + \"(207)\"+ \"8825000\" # much better\n",
-    "print(\"numbersum = \", numbersum) # a number\n",
-    "print(\"stringsum = \", stringsum) # a string"
+    "numbersum= +44 + (207) + 8825000 # a number\n",
+    "stringsum= \"+44\" + \"(207)\"+ \"8825000\" # a string\n",
+    "print(\"numbersum = \", numbersum) # not quite what I want\n",
+    "print(\"stringsum = \", stringsum) # much better"
    ]
   },
   {
@@ -558,12 +558,7 @@
    "outputs": [],
    "source": [
     "# try rewriting the Body Mass Index example using input to ask the users\n",
-    "# for their weight and height\n",
-    "\n",
-    "mass=input(\"Enter your weight in Kg: \") # in Kg\n",
-    "height=input(\"Enter your height in metres: \")\n",
-    "bmi=float(mass)/float(height)**2\n",
-    "print(bmi)"
+    "# for their weight and height\n"
    ]
   },
   {
@@ -759,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
